On branch master Your branch is up to date with 'github/master'.
Changes not staged for commit:
  (use "git add <file>..." to update what will be committed)
  (use "git restore <file>..." to discard changes in working directory)
	modified:   charon-dependencies/pom.xml

no changes added to commit (use "git add" and/or "git commit -a")