@@ -802,18 +802,18 @@
                                 <jvmFlag>${MetaspaceSize}</jvmFlag>
                                 <jvmFlag>${MaxMetaspaceSize}</jvmFlag>
                                 <jvmFlag>${MaxDirectMemorySize}</jvmFlag>
-                                <jvmFlag>-Xlog:gc</jvmFlag><!-- jdk9前是-XX:+PrintGC -->
-                                <jvmFlag>-Xlog:gc*</jvmFlag><!-- jdk9前是-XX:+PrintGCDetails-->
-                                <jvmFlag>-Xlog:gc+heap=trace</jvmFlag><!--jdk9前是-XX:+PrintHeapAtGC-->
-                                <!--                                <jvmFlag>-XX:+PrintGCTimeStamps</jvmFlag>-->
-                                <!--                                <jvmFlag>-XX:+PrintGCApplicationConcurrentTime</jvmFlag>-->
-                                <!--                                <jvmFlag>-XX:+PrintGCApplicationStoppedTime</jvmFlag>-->
-                                <jvmFlag>-Xlog:ref*=debug</jvmFlag><!-- jdk9前是-XX:+PrintReferenceGC-->
-                                <jvmFlag>-Xlog:gc:gc.log</jvmFlag><!--jdk9前是-XLoggc:gc.log-->
+                                <jvmFlag>-XX:+PrintGC</jvmFlag>
+                                <jvmFlag>-XX:+PrintGCDetails</jvmFlag>
+                                <jvmFlag>-XX:+PrintHeapAtGC</jvmFlag>
+                                <jvmFlag>-XX:+PrintGCTimeStamps</jvmFlag>
+                                <jvmFlag>-XX:+PrintGCApplicationConcurrentTime</jvmFlag>
+                                <jvmFlag>-XX:+PrintGCApplicationStoppedTime</jvmFlag>
+                                <jvmFlag>-XX:+PrintReferenceGC</jvmFlag>
+                                <jvmFlag>-XLoggc:gc.log</jvmFlag>
                                 <jvmFlag>-Djava.security.egd=file:/dev/./urandom</jvmFlag>
                                 <jvmFlag>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=0.0.0.0:5005
                                 </jvmFlag>
-                               <jvmFlag>-javaagent:/opt/skywalking-agent/skywalking-agent.jar</jvmFlag>
+                                <jvmFlag>-javaagent:/opt/skywalking-agent/skywalking-agent.jar</jvmFlag>
                                 <jvmFlag>-Dskywalking.plugin.mongodb.trace_param=true</jvmFlag>
                                 <jvmFlag>-Dplugin.mysql.trace_sql_parameters=true</jvmFlag>
                                 <jvmFlag>-Dplugin.mariadb.trace_sql_parameters=true</jvmFlag>
